--- a/native/eLyKseeR-native.Mono.fsproj
+++ b/native/eLyKseeR-native.Mono.fsproj
@@ -30,15 +30,19 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="Mono.Posix" />
+    <Reference Include="FSharp.Core">
+      <HintPath>packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)/../Microsoft SDKs/F#/3.1/Framework/v4.0/Microsoft.FSharp.Targets" />
+  <Import Project="$(MSBuildExtensionsPath32)/../Microsoft SDKs/F#/4.0/Framework/v4.0/Microsoft.FSharp.Targets" />
   <ItemGroup>
-    <Compile Include="src/fsharp/FsUtils.fsi" />
-    <Compile Include="src/fsharp/FsUtils.fs" />
+    <Compile Include="src/FsUtils.fsi" />
+    <Compile Include="src/FsUtils.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Script.fsx" />
     <None Include="eLyKseeR-native.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
