--- a/UT/UT.Win32.fsproj
+++ b/UT/UT.Win32.fsproj
@@ -45,40 +45,40 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\4.0\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="..\tests\TestAssembly.fs">
+    <Compile Include="tests\TestAssembly.fs">
       <Link>TestAssembly.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestKey128.fs">
+    <Compile Include="tests\TestKey128.fs">
       <Link>TestKey128.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestKey256.fs">
+    <Compile Include="tests\TestKey256.fs">
       <Link>TestKey256.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestSha256.fs">
+    <Compile Include="tests\TestSha256.fs">
       <Link>TestSha256.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestRandom.fs">
+    <Compile Include="tests\TestRandom.fs">
       <Link>TestRandom.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestRandList.fs">
+    <Compile Include="tests\TestRandList.fs">
       <Link>TestRandList.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestFileCtrl.fs">
+    <Compile Include="tests\TestFileCtrl.fs">
       <Link>TestFileCtrl.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestAes.fs">
+    <Compile Include="tests\TestAes.fs">
       <Link>TestAes.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestDb.fs">
+    <Compile Include="tests\TestDb.fs">
       <Link>TestDb.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestBackupCtrl.fs">
+    <Compile Include="tests\TestBackupCtrl.fs">
       <Link>TestBackupCtrl.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestRestoreCtrl.fs">
+    <Compile Include="tests\TestRestoreCtrl.fs">
       <Link>TestRestoreCtrl.fs</Link>
     </Compile>
-    <Compile Include="..\tests\TestLiz.fs">
+    <Compile Include="tests\TestLiz.fs">
       <Link>TestLiz.fs</Link>
     </Compile>
     <None Include="packages.config" />
@@ -105,7 +105,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\eLyKseeR-base.Win32.fsproj">
+    <ProjectReference Include="..\base\eLyKseeR-base.Win32.fsproj">
       <Project>{F0AE1EB0-9463-45A4-9E38-8D8033A0B850}</Project>
       <Name>eLyKseeR-base</Name>
     </ProjectReference>
