--- a/base/eLyKseeR-base.Linux.fsproj
+++ b/base/eLyKseeR-base.Linux.fsproj
@@ -13,11 +13,13 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
+    <Optimize>false</Optimize>
     <OutputPath>bin/Debug</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <Optimize>false</Optimize>
     <OutputPath>bin/Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
@@ -29,165 +31,21 @@
     <Reference Include="System.Numerics" />
     <Reference Include="FSharp.Core">
       <Private>True</Private>
+      <HintPath>packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Security" />
     <Reference Include="ManagedOpenSsl">
-      <HintPath>../openssl-net_development/bin/Debug/ManagedOpenSsl.dll</HintPath>
+	    <HintPath>../../openssl-net_development/bin/Debug/ManagedOpenSsl.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Mono.Posix" />
     <Reference Include="sharpPRNG">
-      <HintPath>../sharpPRNG_development/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll</HintPath>
+	    <HintPath>../../sharpPRNG_development/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="src/fsharp/Liz.fsi">
-      <Link>Liz.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Liz.fs">
-      <Link>Liz.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/IStreamIO.fs">
-      <Link>IStreamIO.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/IDb.fs">
-      <Link>IDb.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/DbCtrl.fs">
-      <Link>DbCtrl.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Random.fsi">
-      <Link>Random.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Random.fs">
-      <Link>Random.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/RandList.fsi">
-      <Link>RandList.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/RandList.fs">
-      <Link>RandList.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Key.fsi">
-      <Link>Key.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Key.fs">
-      <Link>Key.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/FileCtrl.fsi">
-      <Link>FileCtrl.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/FileCtrl.fs">
-      <Link>FileCtrl.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Key128.fsi">
-      <Link>Key128.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Key128.fs">
-      <Link>Key128.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Key256.fsi">
-      <Link>Key256.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Key256.fs">
-      <Link>Key256.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/AppId.fsi">
-      <Link>AppId.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/AppId.fs">
-      <Link>AppId.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Sha256.fsi">
-      <Link>Sha256.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Sha256.fs">
-      <Link>Sha256.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Md5.fsi">
-      <Link>Md5.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Md5.fs">
-      <Link>Md5.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Options.fsi">
-      <Link>Options.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Options.fs">
-      <Link>Options.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Logging.fsi">
-      <Link>Logging.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Logging.fs">
-      <Link>Logging.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Aes.fsi">
-      <Link>Aes.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Aes.fs">
-      <Link>Aes.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Chunk.fsi">
-      <Link>Chunk.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Chunk.fs">
-      <Link>Chunk.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Assembly.fsi">
-      <Link>Assembly.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/Assembly.fs">
-      <Link>Assembly.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/DbFp.fs">
-      <Link>DbFp.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/DbKey.fs">
-      <Link>DbKey.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/GZipHeader.fs">
-      <Link>GZipHeader.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/RestoreCtrl.fsi">
-      <Link>RestoreCtrl.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/RestoreCtrl.fs">
-      <Link>RestoreCtrl.fs</Link>
-    </Compile>
-    <Compile Include="src/fsharp/DbBackupJob.fs">
-      <Link>DbBackupJob.fs</Link>
-    </Compile>
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)/../Microsoft SDKs/F#/4.0/Framework/v4.0/Microsoft.FSharp.Targets" />
   <ItemGroup />
-  <ItemGroup>
-    <Compile Include="src/fsharp/BackupCtrl.fsi">
-      <Link>BackupCtrl.fsi</Link>
-    </Compile>
-    <Compile Include="src/fsharp/BackupCtrl.fs">
-      <Link>BackupCtrl.fs</Link>
-    </Compile>
-    <None Include="../openssl-net_development/bin/Debug/ManagedOpenSsl.dll.config">
-      <Link>ManagedOpenSsl.dll.config</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="../openssl-net_development/bin/Debug/libcrypto.linux.1.0.2.so">
-      <Link>libcrypto.linux.1.0.2.so</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="../openssl-net_development/bin/Debug/libssl.linux.1.0.2.so">
-      <Link>libssl.linux.1.0.2.so</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="../sharpPRNG_development/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll.config">
-      <Link>sharpPRNG.dll.config</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
       <Properties>
@@ -200,7 +58,149 @@
     </MonoDevelop>
   </ProjectExtensions>
   <ItemGroup>
-    <ProjectReference Include="eLyKseeR-native.Mono.fsproj">
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="src/Liz.fsi">
+      <Link>Liz.fsi</Link>
+    </Compile>
+    <Compile Include="src/Liz.fs">
+      <Link>Liz.fs</Link>
+    </Compile>
+    <Compile Include="src/IStreamIO.fs">
+      <Link>IStreamIO.fs</Link>
+    </Compile>
+    <Compile Include="src/IDb.fs">
+      <Link>IDb.fs</Link>
+    </Compile>
+    <Compile Include="src/DbCtrl.fs">
+      <Link>DbCtrl.fs</Link>
+    </Compile>
+    <Compile Include="src/Random.fsi">
+      <Link>Random.fsi</Link>
+    </Compile>
+    <Compile Include="src/Random.fs">
+      <Link>Random.fs</Link>
+    </Compile>
+    <Compile Include="src/RandList.fsi">
+      <Link>RandList.fsi</Link>
+    </Compile>
+    <Compile Include="src/RandList.fs">
+      <Link>RandList.fs</Link>
+    </Compile>
+    <Compile Include="src/Key.fsi">
+      <Link>Key.fsi</Link>
+    </Compile>
+    <Compile Include="src/Key.fs">
+      <Link>Key.fs</Link>
+    </Compile>
+    <Compile Include="src/FileCtrl.fsi">
+      <Link>FileCtrl.fsi</Link>
+    </Compile>
+    <Compile Include="src/FileCtrl.fs">
+      <Link>FileCtrl.fs</Link>
+    </Compile>
+    <Compile Include="src/Key128.fsi">
+      <Link>Key128.fsi</Link>
+    </Compile>
+    <Compile Include="src/Key128.fs">
+      <Link>Key128.fs</Link>
+    </Compile>
+    <Compile Include="src/Key256.fsi">
+      <Link>Key256.fsi</Link>
+    </Compile>
+    <Compile Include="src/Key256.fs">
+      <Link>Key256.fs</Link>
+    </Compile>
+    <Compile Include="src/AppId.fsi">
+      <Link>AppId.fsi</Link>
+    </Compile>
+    <Compile Include="src/AppId.fs">
+      <Link>AppId.fs</Link>
+    </Compile>
+    <Compile Include="src/Sha256.fsi">
+      <Link>Sha256.fsi</Link>
+    </Compile>
+    <Compile Include="src/Sha256.fs">
+      <Link>Sha256.fs</Link>
+    </Compile>
+    <Compile Include="src/Md5.fsi">
+      <Link>Md5.fsi</Link>
+    </Compile>
+    <Compile Include="src/Md5.fs">
+      <Link>Md5.fs</Link>
+    </Compile>
+    <Compile Include="src/Options.fsi">
+      <Link>Options.fsi</Link>
+    </Compile>
+    <Compile Include="src/Options.fs">
+      <Link>Options.fs</Link>
+    </Compile>
+    <Compile Include="src/Logging.fsi">
+      <Link>Logging.fsi</Link>
+    </Compile>
+    <Compile Include="src/Logging.fs">
+      <Link>Logging.fs</Link>
+    </Compile>
+    <Compile Include="src/Aes.fsi">
+      <Link>Aes.fsi</Link>
+    </Compile>
+    <Compile Include="src/Aes.fs">
+      <Link>Aes.fs</Link>
+    </Compile>
+    <Compile Include="src/Chunk.fsi">
+      <Link>Chunk.fsi</Link>
+    </Compile>
+    <Compile Include="src/Chunk.fs">
+      <Link>Chunk.fs</Link>
+    </Compile>
+    <Compile Include="src/Assembly.fsi">
+      <Link>Assembly.fsi</Link>
+    </Compile>
+    <Compile Include="src/Assembly.fs">
+      <Link>Assembly.fs</Link>
+    </Compile>
+    <Compile Include="src/DbFp.fs">
+      <Link>DbFp.fs</Link>
+    </Compile>
+    <Compile Include="src/DbKey.fs">
+      <Link>DbKey.fs</Link>
+    </Compile>
+    <Compile Include="src/GZipHeader.fs">
+      <Link>GZipHeader.fs</Link>
+    </Compile>
+    <Compile Include="src/RestoreCtrl.fsi">
+      <Link>RestoreCtrl.fsi</Link>
+    </Compile>
+    <Compile Include="src/RestoreCtrl.fs">
+      <Link>RestoreCtrl.fs</Link>
+    </Compile>
+    <Compile Include="src/DbBackupJob.fs">
+      <Link>DbBackupJob.fs</Link>
+    </Compile>
+    <Compile Include="src/BackupCtrl.fsi">
+      <Link>BackupCtrl.fsi</Link>
+    </Compile>
+    <Compile Include="src/BackupCtrl.fs">
+      <Link>BackupCtrl.fs</Link>
+    </Compile>
+    <None Include="../../openssl-net_development/bin/Debug/ManagedOpenSsl.dll.config">
+      <Link>ManagedOpenSsl.dll.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../../openssl-net_development/bin/Debug/libcrypto.linux.1.0.2.so">
+      <Link>libcrypto.linux.1.0.2.so</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../../openssl-net_development/bin/Debug/libssl.linux.1.0.2.so">
+      <Link>libssl.linux.1.0.2.so</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../../sharpPRNG_development/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll.config">
+      <Link>sharpPRNG.dll.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../packages.config" />
+    <None Include="packages.config" />
+    <ProjectReference Include="../native/eLyKseeR-native.Mono.fsproj">
       <Project>{D51E9EDD-64FB-45EA-8FC5-13F2B91A5E24}</Project>
       <Name>eLyKseeR-native.Mono</Name>
     </ProjectReference>
