compiles on Darwin
Signed-off-by: Alexander Diemand <codieplusplus@apax.net>

--- a/base/eLyKseeR-base.OSX.fsproj
+++ b/base/eLyKseeR-base.OSX.fsproj
@@ -40,7 +40,8 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="FSharp.Core">
-      <HintPath>packages\FSharp.Core.4.3.4\lib\net45\FSharp.Core.dll</HintPath>
+      <HintPath>packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)/../Microsoft SDKs/F#/4.0/Framework/v4.0/Microsoft.FSharp.Targets" />
@@ -197,10 +198,11 @@
       <Link>sharpPRNG.dll.config</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <ProjectReference Include="eLyKseeR-native.Mono.fsproj">
+    <ProjectReference Include="../native/eLyKseeR-native.Mono.fsproj">
       <Project>{D51E9EDD-64FB-45EA-8FC5-13F2B91A5E24}</Project>
       <Name>eLyKseeR-native.Mono</Name>
     </ProjectReference>
     <None Include="../packages.config" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
