--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 
-language: fsharp
+language: csharp
 mono:
   - latest
-
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y nuget
 
 solution: base/eLyKseeR-base.Linux.sln
 install:
