license and copyright added to all source files
Signed-off-by: Alexander Diemand <codieplusplus@apax.net>

--- a/cli/LXRbackup/LXRbackup.Mono.fsproj
+++ b/cli/LXRbackup/LXRbackup.Mono.fsproj
@@ -54,7 +54,7 @@
       <HintPath>..\..\..\openssl-net_development\bin\Debug\ManagedOpenSsl.dll</HintPath>
     </Reference>
     <Reference Include="eLyKseeR">
-      <HintPath>..\..\..\elykseer-base_development\bin\Debug\eLyKseeR.dll</HintPath>
+      <HintPath>..\..\base\bin\Debug\eLyKseeR.dll</HintPath>
     </Reference>
     <Reference Include="sharpPRNG">
       <HintPath>..\..\..\sharpPRNG_development\sharpPRNG\sharpPRNG\bin\Debug\sharpPRNG.dll</HintPath>
