--- a/UT/UT.OSX.fsproj
+++ b/UT/UT.OSX.fsproj
@@ -9,6 +9,7 @@
     <RootNamespace>UT</RootNamespace>
     <AssemblyName>UT</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <DefineConstants>TRACE;DEBUG;compile_for_osx</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
