--- a/native/eLyKseeR-native.Mono.fsproj
+++ b/native/eLyKseeR-native.Mono.fsproj
@@ -31,7 +31,7 @@
     <Reference Include="System.Numerics" />
     <Reference Include="Mono.Posix" />
     <Reference Include="FSharp.Core">
-      <HintPath>..\base\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+      <HintPath>..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
