--- a/gui/LXRrestore/LXRrestore.OSX.fsproj
+++ b/gui/LXRrestore/LXRrestore.OSX.fsproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Xwt.Gtk.0.2.100\build\Xwt.Gtk.props" Condition="Exists('..\packages\Xwt.Gtk.0.2.100\build\Xwt.Gtk.props')" />
+  <Import Project="..\..\packages\Xwt.Gtk.0.2.178\build\Xwt.Gtk.props" Condition="Exists('..\..\packages\Xwt.Gtk.0.2.178\build\Xwt.Gtk.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -37,18 +37,6 @@
     <Reference Include="sharpPRNG">
       <HintPath>..\..\..\sharpPRNG_development\sharpPRNG\sharpPRNG\bin\Debug\sharpPRNG.dll</HintPath>
     </Reference>
-    <Reference Include="Xwt">
-      <HintPath>..\..\..\xwt_development\Xwt\bin\Debug\Xwt.dll</HintPath>
-    </Reference>
-    <Reference Include="Xwt.Gtk">
-      <HintPath>..\..\..\xwt_development\Xwt.Gtk\bin\Debug\Xwt.Gtk.dll</HintPath>
-    </Reference>
-    <Reference Include="Xwt.Gtk.Mac">
-      <HintPath>..\..\..\xwt_development\Xwt.Gtk.Mac\bin\Debug\Xwt.Gtk.Mac.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Mac">
-      <HintPath>..\..\..\xwt_development\Xwt.Gtk.Mac\bin\Debug\Xamarin.Mac.dll</HintPath>
-    </Reference>
     <Reference Include="eLyKseeR-native.Mono">
       <HintPath>..\..\base\bin\Debug\eLyKseeR-native.Mono.dll</HintPath>
     </Reference>
@@ -56,7 +44,19 @@
       <HintPath>..\..\base\bin\Debug\eLyKseeR.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Core">
-      <HintPath>..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+      <HintPath>..\..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Xwt">
+      <HintPath>..\..\packages\Xwt.0.2.178\lib\net40\Xwt.dll</HintPath>
+    </Reference>
+    <Reference Include="Xwt.Gtk">
+      <HintPath>..\..\packages\Xwt.Gtk.0.2.178\lib\net40\Xwt.Gtk.dll</HintPath>
+    </Reference>
+    <Reference Include="Xwt.Gtk.Mac">
+      <HintPath>..\..\packages\Xwt.Gtk.Mac.0.2.178\lib\net40\Xwt.Gtk.Mac.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Mac">
+      <HintPath>..\Xamarin.Mac.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
